infra/kubernetes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: micro-courant
  labels:
    name: micro-courant
    environment: production
